@@ -902,8 +902,8 @@ The optional BUFFERS is a list of emacs-w3m buffers."
 			   (interactive "e")
 			   (w3m-tab-drag-mouse-function e ,buffer)))
 	   (single-action `(lambda (e)
-			 (interactive "e")
-			 (w3m-tab-click-mouse-function e ,buffer)))
+			     (interactive "e")
+			     (w3m-tab-click-mouse-function e ,buffer)))
 	   (double-action1 `(lambda (e)
 			      (interactive "e")
 			      (w3m-tab-double-click-mouse1-function e ,buffer)))
@@ -915,7 +915,15 @@ The optional BUFFERS is a list of emacs-w3m buffers."
 			   (w3m-tab-button-menu e ,buffer)))
 	   (menu-action2 `(lambda (e)
 			    (interactive "e")
-			    (w3m-tab-button-menu2 e ,buffer))))
+			    (w3m-tab-button-menu2 e ,buffer)))
+	   (move-left-action `(lambda (e)
+				(interactive "e")
+				(w3m-tab-click-mouse-function e ,buffer)
+				(w3m-tab-move-left 1 e)))
+	   (move-right-action `(lambda (e)
+				 (interactive "e")
+				 (w3m-tab-click-mouse-function e ,buffer)
+				 (w3m-tab-move-right 1 e))))
       (define-key w3m-tab-map [header-line down-mouse-1] 'ignore)
       (define-key w3m-tab-map [header-line down-mouse-2] 'ignore)
       (define-key w3m-tab-map [header-line mouse-1] single-action)
@@ -929,10 +937,10 @@ The optional BUFFERS is a list of emacs-w3m buffers."
       (define-key w3m-tab-map [header-line wheel-down] 'w3m-tab-next-buffer)
       (define-key w3m-tab-map [header-line mouse-4] 'w3m-tab-previous-buffer)
       (define-key w3m-tab-map [header-line mouse-5] 'w3m-tab-next-buffer)
-      (define-key w3m-tab-map [header-line C-wheel-up] 'w3m-tab-move-left)
-      (define-key w3m-tab-map [header-line C-wheel-down] 'w3m-tab-move-right)
-      (define-key w3m-tab-map [header-line C-mouse-4] 'w3m-tab-move-left)
-      (define-key w3m-tab-map [header-line C-mouse-5] 'w3m-tab-move-right)
+      (define-key w3m-tab-map [header-line C-wheel-up] move-left-action)
+      (define-key w3m-tab-map [header-line C-wheel-down] move-right-action)
+      (define-key w3m-tab-map [header-line C-mouse-4] move-left-action)
+      (define-key w3m-tab-map [header-line C-mouse-5] move-right-action)
       (define-key w3m-mode-map [header-line double-mouse-1]
 	'w3m-goto-new-session-url)
       (define-key w3m-mode-map [header-line mouse-3] menu-action2))
